--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,17 @@ language: java
 jdk: oraclejdk7
 env:
   matrix:
-    # android-19 is always included
-    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+    # NOTE: this should track Android SDK updates
+    - ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
 before_install:
   # Install base Android SDK
+  - ANDROID_SDK_REV=24.1.2
+  - ANDROID_BUILD_TOOLS_REV=22
   - sudo apt-get update -qq
   # changed install to -q instead of -qq to expose any missing packages
   - if [ `uname -m` = x86_64 ]; then sudo apt-get install -q --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch > /dev/null; fi
-  - wget http://dl.google.com/android/android-sdk_r23.0.2-linux.tgz
-  - tar xzf android-sdk_r23.0.2-linux.tgz
+  - wget http://dl.google.com/android/android-sdk_r${ANDROID_SDK_REV}-linux.tgz
+  - tar xzf android-sdk_r${ANDROID_SDK_REV}-linux.tgz
   - export ANDROID_HOME=$PWD/android-sdk-linux
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
@@ -28,7 +30,7 @@ before_install:
   #  addon-google_apis-google-16
   # removed > /dev/null to prevent Travis timing out and ease debugging
   - echo y | android update sdk --filter tools,platform-tools --no-ui --force --all
-  - echo y | android update sdk --filter build-tools-19.0.3 --no-ui --force --all
+  - echo y | android update sdk --filter build-tools-$ANDROID_BUILD_TOOLS_REV --no-ui --force --all
   - echo y | android update sdk --filter $ANDROID_TARGET --no-ui --force --all
   - echo y | android update sdk --filter sys-img-$ANDROID_ABI-$ANDROID_TARGET --no-ui --force --all
 
@@ -50,11 +52,12 @@ before_install:
   # Note: There is now a difference between Target architecture and Platform architecture. What SHOULD they be?
   - NDK_ARCH=""
   - NDK_PLAT="32"
+  - NDK_REV="10d"
   - if [ `uname -m` = x86_64 ]; then NDK_ARCH=_64; NDK_PLAT=32; fi
-  - FILE="android-ndk${NDK_PLAT}-r10b-linux-x86${NDK_ARCH}.tar.bz2"
+  - FILE="android-ndk${NDK_PLAT}-r${NDK_REV}-linux-x86${NDK_ARCH}.tar.bz2"
   - wget http://dl.google.com/android/ndk/${FILE}
   - tar xjf ${FILE}
-  - export ANDROID_NDK_HOME=$PWD/android-ndk-r10b
+  - export ANDROID_NDK_HOME=$PWD/android-ndk-r${NDK_REV}
   
   
 
