--- a/.travis.yml
+++ b/.travis.yml
@@ -48,11 +48,11 @@ before_install:
   #- ./${FILE} > nul
   #- export ANDROID_NDK_HOME=$PWD/android-ndk-r10c
   
-   # Install Android NDK 10b
+   # Install Android NDK 10c
   # Note: There is now a difference between Target architecture and Platform architecture. What SHOULD they be?
   - NDK_ARCH=""
   - NDK_PLAT="32"
-  - NDK_REV="10d"
+  - NDK_REV="10c"
   - if [ `uname -m` = x86_64 ]; then NDK_ARCH=_64; NDK_PLAT=32; fi
   - FILE="android-ndk${NDK_PLAT}-r${NDK_REV}-linux-x86${NDK_ARCH}.tar.bz2"
   - wget http://dl.google.com/android/ndk/${FILE}
