--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,10 @@ before_install:
   # removed > /dev/null to prevent Travis timing out and ease debugging
   - echo y | android update sdk --filter tools,platform-tools --no-ui --force --all
   - echo y | android update sdk --filter build-tools-$ANDROID_BUILD_TOOLS_REV --no-ui --force --all
+  - echo y | android update sdk --filter android-19 --no-ui --force --all
+  - echo y | android update sdk --filter sys-img-$ANDROID_ABI-android-19 --no-ui --force --all
+  - echo y | android update sdk --filter android-21 --no-ui --force --all
+  - echo y | android update sdk --filter sys-img-$ANDROID_ABI-android-21 --no-ui --force --all
   - echo y | android update sdk --filter $ANDROID_TARGET --no-ui --force --all
   - echo y | android update sdk --filter sys-img-$ANDROID_ABI-$ANDROID_TARGET --no-ui --force --all
 
