--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 before_install:
   # Install base Android SDK
   - ANDROID_SDK_REV=24.1.2
-  - ANDROID_BUILD_TOOLS_REV=22
+  - ANDROID_BUILD_TOOLS_REV=22.0.1
   - sudo apt-get update -qq
   # changed install to -q instead of -qq to expose any missing packages
   - if [ `uname -m` = x86_64 ]; then sudo apt-get install -q --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch > /dev/null; fi
@@ -30,7 +30,7 @@ before_install:
   #  addon-google_apis-google-16
   # removed > /dev/null to prevent Travis timing out and ease debugging
   - echo y | android update sdk --filter tools,platform-tools --no-ui --force --all
-  - echo y | android update sdk --filter build-tools-$ANDROID_BUILD_TOOLS_REV --no-ui --force --all
+  - echo y | android update sdk --filter build-tools-19.1,build-tools-20,build-tools-21.1.2,build-tools-$ANDROID_BUILD_TOOLS_REV --no-ui --force --all
   - echo y | android update sdk --filter android-19 --no-ui --force --all
   - echo y | android update sdk --filter sys-img-$ANDROID_ABI-android-19 --no-ui --force --all
   #- echo y | android update sdk --filter android-21 --no-ui --force --all
